--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,25 @@
 version: "3"
 services:
-  server:
-    image: backend
+  linkmygoodsapi_mysqldb:
+    image: mysql:5.7
+    networks:
+      - spring-mysql-net
+    environment:
+      - MYSQL_ROOT_PASSWORD=1234
+      - MYSQL_DATABASE=test
+      - MYSQL_USER=sa
+      - MYSQL_PASSWORD=1234
+
+  linkmygoodsapi_server:
+    image: linkmygoodsapi:latest
     ports:
       - "8443:8443"
     environment:
-      - spring.datasource.url=jdbc:mysql://hibernatejpa-mysqldb-1:3306/employeedb?useSSL=false
+      - spring.datasource.url=jdbc:mysql://linkmygoodsapi_mysqldb:3306/test?useSSL=false
     networks:
       - springmysql-net
     depends_on:
       - mysqldb
 
-  mysqldb:
-    image: mysql:5.7
-    networks:
-      - springmysql-net
-    environment:
-      - MYSQL_ROOT_PASSWORD=1234
-      - MYSQL_DATABASE=employeedb
-      - MYSQL_USER=sa
-      - MYSQL_PASSWORD=1234
-
 networks:
-  springmysql-net:
+  spring-mysql-net:
