--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     environment:
       - spring.datasource.url=jdbc:mysql://linkmygoodsapi_mysqldb:3306/test?useSSL=false
     networks:
-      - springmysql-net
+      - spring-mysql-net
     depends_on:
       - linkmygoodsapi_mysqldb
 
