--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,13 @@
     </scm>
     <build>
     
-    	
+    	<resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+        
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
